# nomnom

./: .gitignore  CLAUDE.md  CODEGEN_NON_ROOT_PERSISTENCE_CHANGES.md  CONTRIBUTING.md  CURRENT_SETUP_VERIFICATION.md  Cargo.toml  DEBUG_MESSAGE_FLOW_PLAN.md  Dockerfile.codegen  Dockerfile.component  Dockerfile.dev  HELM_CODEGEN_INTEGRATION.md  LICENSE  Makefile  NATS_API_BINARY.md  PLAN_DASHBOARD_PRIMARY_KEY_FIX.md  PLAN_DEPLOY_FULL_DASHBOARD.md  PLAN_DOCKER_SECURITY_HARDENING.md  PLAN_FIX_WORKER_PARSING.md  PLAN_INGESTION_RELIABILITY.md  PLAN_KUBERNETES_DEPLOYMENT.md  PLAN_NATS_JETSTREAM_INTEGRATION.md  PLAN_PRE_K8S_IMPROVEMENTS.md  README.md  REPEATING_SEGMENTS_PLAN.md  TESTING_GUIDE.md  TRANSFORMS_CODEGEN_IMPLEMENTATION.md  build-dev.sh  build.sh  regenerate_tpch.rs  test-dashboard.sh  test-helm-kind.sh  test-nats-flow.sh
config/examples/tpch/: .env.test  .gitignore  Cargo.toml  PLAN_DATABASE_TESTING.md  PLAN_REALTIME_DASHBOARD.md  README.md  build.sh  db.sh  docker-compose.yml  example_customers.json  example_order.json  example_products.json  generate.sh  generate_test_data.py  nomnom.yaml  pyproject.toml  test-api.sh  test-dashboard.sh  test.sh
config/examples/tpch/dashboard/: .env.example  Cargo.toml  Dockerfile.backend  docker-compose.dashboard.yml
config/examples/tpch/dashboard/backend/: config.py  main.py  requirements.txt
config/examples/tpch/dashboard/frontend/: index.html  package.json
config/examples/tpch/dashboard/frontend/src/: App.tsx
config/examples/tpch/dashboard/frontend/src/components/: Dashboard.tsx  EntityCard.tsx
config/examples/tpch/dashboard/frontend/src/hooks/: useRealtimeData.ts
config/examples/tpch/dashboard/migrations/: run.sh
config/examples/tpch/dashboard/src/: api.rs  config.rs  main.rs  polling.rs  websocket.rs
config/examples/tpch/entities/: customer.yaml  order.yaml  orderlineitem.yaml  product.yaml
config/examples/tpch/examples/: generate_dashboard.rs
config/examples/tpch/src/: generated.rs  generated_bindings.rs  lib.rs  schema.rs  transform_registry.rs
config/examples/tpch/src/db/: generated_operations.rs
config/examples/tpch/src/models/: mod.rs
config/examples/tpch/src/python/: generated_persistence.rs
docs/: CODEGEN_FIX_PLAN.md  COMPILATION_FIXES.md  DATABASE_COMPARISON.md  DATABASE_CONFIGURATION.md  ENTITY_SCHEMA_V1.md  FINAL_TEST_FIX_SUMMARY.md  MYSQL_SUPPORT_PLAN.md  PHASE4_TESTING_SUMMARY.md  README.md  WORKER_MODULE_SPLITTING_PLAN.md  dependency-based-processing.md  design-nomnom-library.md  nomnom-extraction-plan.md  transform_yaml_schema.md
docs/architecture/: nats-components.md  nats-implementation.md
docs/archive/: README.md
docs/archive/designs/: axum-dashboard.md  fastapi-ingestion.md  rust-ingestion-api.md
docs/archive/implementations/: axum-ingestion.md  debug-message-flow.md  derived-entities-status.md  derived-entities.md  helm-testing.md  nats-codegen-bugfix.md  nats-config-fix.md  nats-fix-success.md  nats-transition.md
docs/archive/plans/: derived-entities.md  e2e-deployment.md  kubernetes-deployment.md  worker-table-generation.md
examples/: csv_example.md  diagnosis-v1.yaml  json_example.md  patient-diagnosis-core-v1.yaml  test_migrated_files.rs  test_v1_schema.rs  test_yaml_loader.rs
nomnom-helm/: Chart.yaml  README.md  values-dev.yaml  values.yaml
nomnom-helm/templates/: NOTES.txt  _helpers.tpl  debug-pod.yaml  ingress.yaml  secret.yaml
nomnom-helm/templates/codegen/: buildah-cache.yaml  buildah-jobs.yaml  buildah-rbac.yaml  buildah-scripts.yaml  entity-configmaps.yaml
nomnom-helm/templates/dashboard/: backend-deployment.yaml  backend-service.yaml  deployment.yaml  frontend-deployment.yaml  frontend-service.yaml  service.yaml
nomnom-helm/templates/ingestion/: api-deployment.yaml  api-hpa.yaml  api-service.yaml  worker-deployment.yaml  worker-scaledobject.yaml
nomnom-helm/templates/nats/: configmap.yaml  service.yaml  statefulset.yaml
nomnom-helm/templates/postgres/: configmap.yaml  service.yaml  statefulset.yaml
nomnom-helm/templates/registry/: zot-deployment.yaml
scripts/: migrate_to_v1.py  send_test_orders.sh
src/: entity.rs  extraction.rs  lib.rs  python_bridge.rs  serialization.rs  transform_registry.rs
src/codegen/: build_config.rs  dependency_graph.rs  fs_utils.rs  lineage.rs  mod.rs  orchestration.rs  parser_binary.rs  plugins.rs  project_config.rs  pyo3_codegen.rs  python_codegen.rs  rust_codegen.rs  transform_codegen.rs  types.rs  utils.rs  yaml_loader.rs
src/codegen/benthos/: docker_compose.rs  helm.rs  kubernetes.rs  mod.rs  mysql_schema.rs  nats_streams.rs  pipeline_yaml.rs
src/codegen/dashboard/: axum_backend.rs  docker.rs  fastapi_backend.rs  htmx_dashboard.rs  mod.rs  react_frontend.rs  sql_triggers.rs  utils.rs
src/db/: generated_operations.rs
src/diesel_runtime/: database.rs  mod.rs  operations.rs  python.rs
src/nats/: client.rs  message_envelope.rs  mod.rs
src/runtime/: config_loader.rs  context.rs  message_parser.rs  mod.rs  transform_registry.rs  transforms.rs
templates/helm/: Chart.yaml  README.md
tests/: integration_test.rs  test_dashboard_generation.rs  test_multi_database.rs
(+35 files in other folders)
