[package]
name = "nomnom"
version = "0.1.0"
edition = "2021"
authors = ["SCIE"]
description = "General-purpose data transformation and entity framework with YAML-based code generation"
license = "MIT"
repository = "https://github.com/scie-nz/nomnom"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
indexmap = "2.0"
convert_case = "0.6"
regex = "1.10"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }

# Diesel ORM with connection pooling
diesel = { version = "2.3", features = ["postgres", "sqlite", "r2d2"] }
r2d2 = "0.8"

# Optional Python bridge
pyo3 = { version = "0.20", optional = true, features = ["abi3-py38"] }

[dev-dependencies]
tempfile = "3.8"

[features]
default = []
python-bridge = ["pyo3"]

[lib]
name = "nomnom"
crate-type = ["lib"]

[[bin]]
name = "nomnom"
path = "src/bin/nomnom.rs"
