[package]
name = "nomnom"
version = "0.1.0"
edition = "2021"
authors = ["SCIE"]
description = "General-purpose data transformation and entity framework with YAML-based code generation"
license = "MIT"
repository = "https://github.com/scie-nz/nomnom"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
indexmap = "2.0"
convert_case = "0.6"
regex = "1.10"

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }

# Diesel ORM with connection pooling
# Note: Features postgres/mysql are controlled by feature flags below
diesel = { version = "2.3", features = ["r2d2"], default-features = false }
r2d2 = "0.8"

# Optional Python bridge
pyo3 = { version = "0.20", optional = true, features = ["abi3-py38"] }

# NATS JetStream integration
async-nats = "0.35"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP server for nats-api binary
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["postgres"]
postgres = ["diesel/postgres"]
mysql = ["diesel/mysql"]
sqlite = ["diesel/sqlite"]
python-bridge = ["pyo3"]

[lib]
name = "nomnom"
crate-type = ["lib"]

[[bin]]
name = "nomnom"
path = "src/bin/nomnom.rs"

[[bin]]
name = "nats-api"
path = "src/bin/nats-api.rs"
